# company-task

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
1/: CMakeLists.txt  Order.h  OrderBookTester.h  readme.md  run.cpp
2/: CMakeLists.txt  readme.md  run.cpp
3/: CMakeLists.txt  Client.cpp  Common.h  Server.cpp  User.cpp  User.h  core.cpp  core.h  deal.cpp  deal.h  myTypes.h  readme.md  test.cpp
5/: CMakeLists.txt  oop_example.cpp  opengl_example.cpp  readme.md  sdl_example.cpp
6/: CMakeLists.txt  main.cpp  readme.md
7/: CMakeLists.txt  Client.cpp  Server.h  readme.md  runServer.cpp  test.cpp
7/server_full/: readme.md
7/server_full/include/: Common.h  Cookies.h  Error.h  Headers.h  Http.h  Parse.h  Request.h  Response.h  Threadpool.h  Uri.h
7/server_full/src/: Cookie.cpp  Headers.cpp  Http.cpp  Request.cpp  Response.cpp
src/: foxencript.cpp
tools/: json.hpp
